# learn-wayland

./: .editorconfig  CMakeLists.txt  README.md
include/: shm.h
src/: main.c  shm.c
